# ashapi

./: .gitignore  Containerfile  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  pokedex.db  routers.py  scripts.py  settings.py
app/data/: pokemon.csv
